@@ -5,6 +5,7 @@ import com.zufar.icedlatte.review.exception.GetReviewsBadRequestException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
@@ -23,55 +24,25 @@ public class GetReviewsRequestValidator {
                          final String sortAttribute,
                          final String sortDirection,
                          final List<Integer> productRatings) {
-        StringBuilder errorMessages = new StringBuilder();
+        List<String> errors = new ArrayList<>(
+                paginationParametersValidator.validate(pageNumber, pageSize, sortAttribute, sortDirection, ALLOWED_SORT_ATTRIBUTES_VALUES));
 
-        StringBuilder paginationErrorMessages = paginationParametersValidator.validate(pageNumber, pageSize, sortAttribute, sortDirection, ALLOWED_SORT_ATTRIBUTES_VALUES);
-        errorMessages.append(paginationErrorMessages);
+        if (productRatings != null) {
+            if (productRatings.stream().anyMatch(Objects::isNull) || !ALLOWED_PRODUCT_RATING_VALUES.containsAll(productRatings)) {
+                errors.add(error("Some values of this product's rating list = '%s' are incorrect. Allowed 'productRating' values are '%s'."
+                        .formatted(productRatings, ALLOWED_PRODUCT_RATING_VALUES)));
+            } else if (productRatings.stream().distinct().count() < productRatings.size()) {
+                errors.add(error("This list of product's rating values '%s' has duplicates. Product's rating values must be unique."
+                        .formatted(productRatings)));
+            }
+        }
 
-        StringBuilder productRatingsParameterErrorMessages = validateProductRatingsParameter(productRatings);
-        errorMessages.append(productRatingsParameterErrorMessages);
-
-        if (!errorMessages.isEmpty()) {
-            throw new GetReviewsBadRequestException(errorMessages.toString());
+        if (!errors.isEmpty()) {
+            throw new GetReviewsBadRequestException(String.join(" ", errors));
         }
     }
 
-    private StringBuilder validateProductRatingsParameter(final List<Integer> productRatings) {
-        final StringBuilder errorMessages = new StringBuilder();
-        
-        if (productRatings == null) {
-            return errorMessages; // null is allowed for optional parameter
-        }
-        
-        if (hasInvalidValues(productRatings)) {
-            errorMessages.append(createInvalidValuesError(productRatings));
-        }
-        
-        if (hasDuplicates(productRatings)) {
-            errorMessages.append(createDuplicatesError(productRatings));
-        }
-        
-        return errorMessages;
-    }
-    
-    private boolean hasInvalidValues(final List<Integer> productRatings) {
-        return productRatings.stream().anyMatch(Objects::isNull) || !ALLOWED_PRODUCT_RATING_VALUES.containsAll(productRatings);
-    }
-    
-    private String createInvalidValuesError(final List<Integer> productRatings) {
-        return createErrorMessage(String.format("Some values of this product's rating list = '%s' are incorrect. Allowed 'productRating' values are '%s'.",
-                productRatings, ALLOWED_PRODUCT_RATING_VALUES));
-    }
-    
-    private boolean hasDuplicates(final List<Integer> productRatings) {
-        return productRatings.stream().noneMatch(Objects::isNull) && productRatings.stream().distinct().count() < productRatings.size();
-    }
-    
-    private String createDuplicatesError(final List<Integer> productRatings) {
-        return createErrorMessage(String.format("This list of product's rating values '%s' has duplicates. Product's rating values must be unique.", productRatings));
-    }
-
-    private static String createErrorMessage(final String errorMessage) {
-        return String.format(" Error: { %s }. ", errorMessage);
+    private static String error(String message) {
+        return " Error: { %s }. ".formatted(message);
     }
 }
